# showcase

./: readme.md
.github/workflows/: book-store-rs.yml
book-store-rs/: Cargo.toml  Makefile
book-store-rs/app/: Cargo.toml
book-store-rs/app/src/: main.rs
book-store-rs/db/entity/: Cargo.toml
book-store-rs/db/entity/src/: authors.rs  authors_books.rs  books.rs  category.rs  lib.rs  prelude.rs
book-store-rs/db/migration/: Cargo.toml
book-store-rs/db/migration/src/: lib.rs  m20220801_231729_category.rs  m20220801_231937_authors.rs  m20220801_232341_books.rs  m20220801_232913_authors_books.rs  main.rs
book-store-rs/docker/: develop.yml  migration.dockerfile
book-store-rs/env/: develop-guest.env  develop-host.env
book-store-rs/lib/: Cargo.toml
book-store-rs/lib/src/: lib.rs
book-store-rs/lib/src/config/: database.rs  mod.rs
book-store-rs/lib/src/handler/: author.rs  context.rs  mod.rs  query.rs  schema.rs
book-store-rs/lib/src/model/: author.rs  database.rs  mod.rs
book-store-rs/lib/src/server/: mod.rs
virtual-machine/: .gitignore  Cargo.toml
virtual-machine/app/: Cargo.toml
virtual-machine/app/src/: main.rs
virtual-machine/lvm/: Cargo.toml
virtual-machine/lvm/src/: lib.rs
virtual-machine/lvm/src/core/: code.rs  index.rs  kind.rs  mod.rs  opcode.rs  rank.rs  task.rs  value.rs
virtual-machine/lvm/src/isa/: mod.rs
virtual-machine/lvm/src/mem/: mod.rs
virtual-machine/mcs/: Cargo.toml
virtual-machine/mcs/src/: cmd.rs  kind.rs  lib.rs  make.rs
virtual-machine/res/: command-r32.json  prog-num-sum.json
(+37 files in other folders)
